[gd_scene load_steps=7 format=3 uid="uid://dxh5b6t8axr8q"]

[ext_resource type="Script" uid="uid://bfhugarupk7sl" path="res://addons/icosa-gallery/icosa_gallery_browser.gd" id="1_whk8d"]
[ext_resource type="Script" uid="uid://brj0vspyeddhk" path="res://addons/icosa-gallery/icosa_api.gd" id="3_4yiif"]
[ext_resource type="Texture2D" uid="uid://kvgeirr0rdvn" path="res://addons/icosa/logo/Icosa_Gallery_logo.png" id="3_6mgym"]

[sub_resource type="SystemFont" id="SystemFont_6qgpy"]
font_names = PackedStringArray("Arial")
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_4yiif"]
base_font = SubResource("SystemFont_6qgpy")

[sub_resource type="Theme" id="Theme_xcyys"]
default_font = SubResource("FontVariation_4yiif")

[node name="IcosaBrowser" type="VBoxContainer" node_paths=PackedStringArray("api")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_xcyys")
script = ExtResource("1_whk8d")
api = NodePath("API")

[node name="Tabs" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Login" type="MarginContainer" parent="Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="User" type="VBoxContainer" parent="Tabs/Login"]
layout_mode = 2
alignment = 1

[node name="UserInfo" type="RichTextLabel" parent="Tabs/Login/User"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Logged in as: [b]nil[/b]
Email: postmaster@nil00.com"
fit_content = true
horizontal_alignment = 1

[node name="LoginStatus" type="RichTextLabel" parent="Tabs/Login/User"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/paragraph_separation = 15
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "You are not logged in. [url=https://icosa.gallery/device]Login Here.[/url]"
fit_content = true
horizontal_alignment = 1

[node name="LoginCode" type="LineEdit" parent="Tabs/Login/User"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
placeholder_text = "Enter Code.."
alignment = 1

[node name="LogoutButton" type="Button" parent="Tabs/Login/User"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Logout"

[node name="API" type="HTTPRequest" parent="."]
script = ExtResource("3_4yiif")
metadata/_custom_type_script = "uid://brj0vspyeddhk"

[node name="HostOffline" type="AcceptDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = ""
initial_position = 1
size = Vector2i(277, 100)
always_on_top = true
dialog_text = "Sorry! Archive.org is down right now!
Please check back later."

[node name="Help" type="AcceptDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
oversampling_override = 1.0
title = "Help & About"
initial_position = 1
size = Vector2i(455, 270)
always_on_top = true
dialog_text = "Welcome to Icosa Gallery. <intro>

To download, click the arrow button in the bottom of an assets
thumbnail.

GLTF2 is the reccomended format. 
The other formats may be unsupported or not work correctly.

<outro>"

[node name="HelpOtherFormats" type="AcceptDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
oversampling_override = 1.0
title = "Help & About"
initial_position = 1
size = Vector2i(455, 270)
always_on_top = true
dialog_text = "Welcome to Icosa Gallery. <intro>

To download, click the arrow button in the bottom of an assets
thumbnail.

GLTF2 is the reccomended format. 
The other formats may be unsupported or not work correctly.

<outro>"

[node name="Login" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
oversampling_override = 1.0
title = "Login"
initial_position = 2
size = Vector2i(277, 111)
always_on_top = true
ok_button_text = "Login"

[node name="Control" type="VBoxContainer" parent="Login"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2

[node name="Username" type="LineEdit" parent="Login/Control"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="Password" type="LineEdit" parent="Login/Control"]
layout_mode = 2
placeholder_text = "Password"
alignment = 1

[node name="Logo" type="TextureButton" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 1
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
texture_normal = ExtResource("3_6mgym")
ignore_texture_size = true
stretch_mode = 4

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="tab_button_pressed" from="Tabs" to="." method="_on_tabs_tab_button_pressed"]
[connection signal="tab_changed" from="Tabs" to="." method="_on_tabs_tab_changed"]
[connection signal="meta_clicked" from="Tabs/Login/User/UserInfo" to="." method="_on_user_info_meta_clicked"]
[connection signal="meta_clicked" from="Tabs/Login/User/LoginStatus" to="." method="_on_user_info_meta_clicked"]
[connection signal="text_changed" from="Tabs/Login/User/LoginCode" to="." method="_on_login_code_text_changed"]
[connection signal="text_submitted" from="Tabs/Login/User/LoginCode" to="." method="_on_login_code_text_submitted"]
[connection signal="pressed" from="Tabs/Login/User/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="request_completed" from="API" to="." method="_on_api_request_completed"]
